# pipe-pandoc

./: .dockerignore  .gitignore  Dockerfile  markitdown_pipeline_router.py  pandoc_app.py  pandoc_pipeline_router.py  pyproject.toml  run.ps1  steps.txt  test_router_app.py
uploads/5747d6c9-b838-4f0c-bbdd-14dec1ec5866/: 5747d6c9-b838-4f0c-bbdd-14dec1ec5866.dom.json  5747d6c9-b838-4f0c-bbdd-14dec1ec5866.md  5747d6c9-b838-4f0c-bbdd-14dec1ec5866.semantic.json
uploads/628cab71-1b3c-47fe-87fb-0480f8dbb1cd/: 628cab71-1b3c-47fe-87fb-0480f8dbb1cd.dom.json  628cab71-1b3c-47fe-87fb-0480f8dbb1cd.md  628cab71-1b3c-47fe-87fb-0480f8dbb1cd.semantic.json
uploads/6e1dad23-2bd8-469c-81fb-927d6e90bd90/: 6e1dad23-2bd8-469c-81fb-927d6e90bd90.dom.json  6e1dad23-2bd8-469c-81fb-927d6e90bd90.md  6e1dad23-2bd8-469c-81fb-927d6e90bd90.semantic.json
uploads/797739e2-bba9-4d09-a305-1ff8ef86e7d6/: 797739e2-bba9-4d09-a305-1ff8ef86e7d6.dom.json  797739e2-bba9-4d09-a305-1ff8ef86e7d6.md  797739e2-bba9-4d09-a305-1ff8ef86e7d6.semantic.json
uploads/7b666b60-7f0e-430c-97cf-6f17ef39a441/: 7b666b60-7f0e-430c-97cf-6f17ef39a441.dom.json  7b666b60-7f0e-430c-97cf-6f17ef39a441.md  7b666b60-7f0e-430c-97cf-6f17ef39a441.semantic.json
uploads/ab15a1e6-8969-4d2a-8bd8-8b6c7d19ce13/: ab15a1e6-8969-4d2a-8bd8-8b6c7d19ce13.dom.json  ab15a1e6-8969-4d2a-8bd8-8b6c7d19ce13.md  ab15a1e6-8969-4d2a-8bd8-8b6c7d19ce13.semantic.json
uploads/bfe7ce60-f694-40b0-a3dd-44256a1d3a4a/: bfe7ce60-f694-40b0-a3dd-44256a1d3a4a.dom.json  bfe7ce60-f694-40b0-a3dd-44256a1d3a4a.md  bfe7ce60-f694-40b0-a3dd-44256a1d3a4a.semantic.json
(+14 files in other folders)
